# snakey-scrapey

./: .gitignore  Makefile  README.md  pyproject.toml  scraping.py  test_scraping.py
scraped_data/northspider/: northspider_batch_1.json  northspider_batch_1.jsonl
